small effort to use virtual-threads when running threads